# discord-agent-hub

./: .env.example  .gitignore  AGENTS.md  AUTHORS  README.md  pyproject.toml
examples/: gemini-code-agent.md  komaro-gpt-agent.md  komaro.md  plain-gpt-agent.md  plain-openai-agent.md  research-anthropic-agent.md  research-claude-agent.md  the-interpreter-gpt-agent.md
release/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md
scripts/: README.md  hubctl.sh  render-events-md.py
src/discord_agent_hub/: __init__.py  agent_markdown.py  bot.py  config.py  conversation_render.py  document_extract.py  event_markdown.py  knowledge.py  main.py  models.py  provider_instructions.py  storage.py  structured_log.py
src/discord_agent_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/discord_agent_hub/providers/: __init__.py  anthropic_messages.py  base.py  cli_stub.py  gemini_api.py  openai_responses.py
tests/: test_agent_markdown.py  test_agent_store_delete.py  test_agent_store_save.py  test_anthropic_provider.py  test_bot_helpers.py  test_chat_visibility.py  test_cli_stub_provider.py  test_document_extract.py  test_event_markdown.py  test_gemini_provider.py  test_knowledge.py  test_load_behavior.py  test_message_routing.py  test_openai_provider.py  test_provider_registry.py  test_session_helpers.py  test_storage.py  test_structured_log.py
