[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-agent-hub"
version = "0.2.0"
description = "Multi-user Discord hub for OpenAI, Claude Code, and Gemini agents"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
  {name = "Kenji Saito", email = "ks91@sfc.wide.ad.jp"},
]
dependencies = [
  "discord.py==2.7.1",
  "google-genai>=1.0,<2",
  "openai==1.109.1",
  "pydantic==2.11.10",
  "pypdf>=5,<6",
  "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==0.26.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
